[package]
name = "stride-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "now",
    "serde",
] }
uuid = { version = "1.12", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
